prevent overflow from impact

--- a/src/features/impact.css
+++ b/src/features/impact.css
@@ -3,6 +3,15 @@
 	z-index: 	z-index: 904;
 	transform: scale(1.0);
 	pointer-events: none;
+
+	/* woaw body was 0px in height */
+	top: 0;
+	left: 0;
+/*	position: fixed;*/
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 }
 
 .impact {
